[gd_scene load_steps=2 format=3 uid="uid://bnbm2uo7unamp"]

[ext_resource type="Script" uid="uid://dvwkv7orrbphn" path="res://game-scenes/end_menu/end.gd" id="1_end"]

[node name="EndMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_end")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.0627451, 1)

[node name="CreditsContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsLabel" type="Label" parent="CreditsContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 11.0
offset_top = 527.0
offset_bottom = 2086.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 42
text = "CREDITS

Game Design
 Niels Ouvrard / Léo Ferrarini/ Max Roiron

Level Design
Léo Ferrarini

Programming
Niels Ouvrard / Max Roiron

Art
Raphaelle / Niels Ouvrard / Max Roiron / Léo Ferrarini

Music & Sound
Max Roiron

Special Thanks
Ruben!"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.369335, 1, 0.45081264, 1)
theme_override_colors/font_shadow_color = Color(0.43529412, 0.92941177, 0.8156863, 0.3137255)
theme_override_font_sizes/font_size = 64
text = "YOU ESCAPED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Again"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
